# firstlastString

./: CMakeLists.txt  README.md
docs/: FirstLastString.bs  FirstLastString.html  index.html
src/: CMakeLists.txt  FirstLast.h  main.cpp
